--- a/src/BoilerPlate/BoilerPlate.vcxproj.filters
+++ b/src/BoilerPlate/BoilerPlate.vcxproj.filters
@@ -10,6 +10,9 @@
     <ClCompile Include="MathUtilities.cpp" />
     <ClCompile Include="Palette.cpp" />
     <ClCompile Include="Vector2.cpp" />
+    <ClCompile Include="Player.cpp" />
+    <ClCompile Include="Vector3.cpp" />
+    <ClCompile Include="Vector4.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="App.hpp" />
@@ -19,6 +22,9 @@
     <ClInclude Include="MathUtilities.h" />
     <ClInclude Include="Palette.h" />
     <ClInclude Include="Vector2.hpp" />
+    <ClInclude Include="Player.hpp" />
+    <ClInclude Include="Vector3.hpp" />
+    <ClInclude Include="Vector4.hpp" />
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Engine">
