Added Entity class and Asteroid class. Changes in rendering

--- a/src/BoilerPlate/BoilerPlate.vcxproj
+++ b/src/BoilerPlate/BoilerPlate.vcxproj
@@ -22,7 +22,7 @@
     <ProjectGuid>{A725D716-B24E-4E54-85BF-1EB3E4C30D37}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
     <RootNamespace>BoilerPlate</RootNamespace>
-    <WindowsTargetPlatformVersion>8.1</WindowsTargetPlatformVersion>
+    <WindowsTargetPlatformVersion>10.0.16299.0</WindowsTargetPlatformVersion>
     <ProjectName>BoilerPlate</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -42,7 +42,7 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
-    <PlatformToolset>v140</PlatformToolset>
+    <PlatformToolset>v141</PlatformToolset>
     <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'" Label="Configuration">
@@ -173,7 +173,9 @@ copy /Y "$(SolutionDir)\Externals\SDL2-2.0.4\lib\x64\SDL2.dll" "$(TargetDir)SDL2
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="App.cpp" />
+    <ClCompile Include="Asteroid.cpp" />
     <ClCompile Include="Color.cpp" />
+    <ClCompile Include="Entity.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="MathUtilities.cpp" />
     <ClCompile Include="Palette.cpp" />
@@ -187,7 +189,9 @@ copy /Y "$(SolutionDir)\Externals\SDL2-2.0.4\lib\x64\SDL2.dll" "$(TargetDir)SDL2
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="App.hpp" />
+    <ClInclude Include="Asteroid.hpp" />
     <ClInclude Include="Color.h" />
+    <ClInclude Include="Entity.hpp" />
     <ClInclude Include="MathUtilities.h" />
     <ClInclude Include="Palette.h" />
     <ClInclude Include="Player.hpp" />
