Uploading progress before Game class

--- a/src/BoilerPlate/BoilerPlate.vcxproj.filters
+++ b/src/BoilerPlate/BoilerPlate.vcxproj.filters
@@ -15,6 +15,7 @@
     <ClCompile Include="Vector4.cpp" />
     <ClCompile Include="Asteroid.cpp" />
     <ClCompile Include="Entity.cpp" />
+    <ClCompile Include="Game.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="App.hpp" />
@@ -29,6 +30,7 @@
     <ClInclude Include="MathUtilities.hpp" />
     <ClInclude Include="Palette.hpp" />
     <ClInclude Include="Color.hpp" />
+    <ClInclude Include="Game.hpp" />
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Engine">
