--- a/src/BoilerPlate/BoilerPlate.vcxproj
+++ b/src/BoilerPlate/BoilerPlate.vcxproj
@@ -176,6 +176,7 @@ copy /Y "$(SolutionDir)\Externals\SDL2-2.0.4\lib\x64\SDL2.dll" "$(TargetDir)SDL2
     <ClCompile Include="Asteroid.cpp" />
     <ClCompile Include="Color.cpp" />
     <ClCompile Include="Entity.cpp" />
+    <ClCompile Include="Game.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="MathUtilities.cpp" />
     <ClCompile Include="Palette.cpp" />
@@ -192,6 +193,7 @@ copy /Y "$(SolutionDir)\Externals\SDL2-2.0.4\lib\x64\SDL2.dll" "$(TargetDir)SDL2
     <ClInclude Include="Asteroid.hpp" />
     <ClInclude Include="Color.hpp" />
     <ClInclude Include="Entity.hpp" />
+    <ClInclude Include="Game.hpp" />
     <ClInclude Include="MathUtilities.hpp" />
     <ClInclude Include="Palette.hpp" />
     <ClInclude Include="Player.hpp" />
