--- a/src/BoilerPlate/BoilerPlate.vcxproj
+++ b/src/BoilerPlate/BoilerPlate.vcxproj
@@ -172,6 +172,7 @@ copy /Y "$(SolutionDir)\Externals\SDL2-2.0.4\lib\x64\SDL2.dll" "$(TargetDir)SDL2
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Ammo.cpp" />
     <ClCompile Include="App.cpp" />
     <ClCompile Include="Asteroid.cpp" />
     <ClCompile Include="Color.cpp" />
@@ -189,6 +190,7 @@ copy /Y "$(SolutionDir)\Externals\SDL2-2.0.4\lib\x64\SDL2.dll" "$(TargetDir)SDL2
     <ClCompile Include="Vector4.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Ammo.hpp" />
     <ClInclude Include="App.hpp" />
     <ClInclude Include="Asteroid.hpp" />
     <ClInclude Include="Color.hpp" />
