--- a/src/BoilerPlate/BoilerPlate.vcxproj.filters
+++ b/src/BoilerPlate/BoilerPlate.vcxproj.filters
@@ -17,6 +17,7 @@
     <ClCompile Include="Entity.cpp" />
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="Ammo.cpp" />
+    <ClCompile Include="InputManager.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="App.hpp" />
@@ -33,6 +34,7 @@
     <ClInclude Include="Color.hpp" />
     <ClInclude Include="Game.hpp" />
     <ClInclude Include="Ammo.hpp" />
+    <ClInclude Include="InputManager.hpp" />
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Engine">
