Rendering score and game over text

--- a/src/BoilerPlate/BoilerPlate.vcxproj
+++ b/src/BoilerPlate/BoilerPlate.vcxproj
@@ -198,6 +198,7 @@ copy /Y "$(SolutionDir)\Externals\irrKlang-64bit-1.6.0\bin\winx64-visualStudio\i
     <ClCompile Include="App.cpp" />
     <ClCompile Include="Asteroid.cpp" />
     <ClCompile Include="Color.cpp" />
+    <ClCompile Include="DisplayText.cpp" />
     <ClCompile Include="Entity.cpp" />
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="InputManager.cpp" />
@@ -217,6 +218,7 @@ copy /Y "$(SolutionDir)\Externals\irrKlang-64bit-1.6.0\bin\winx64-visualStudio\i
     <ClInclude Include="App.hpp" />
     <ClInclude Include="Asteroid.hpp" />
     <ClInclude Include="Color.hpp" />
+    <ClInclude Include="DisplayText.hpp" />
     <ClInclude Include="Entity.hpp" />
     <ClInclude Include="Game.hpp" />
     <ClInclude Include="InputManager.hpp" />
